<resources>
    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="bill_amount_label">Bill Amount:</string>
    <string name="percent_label">Percent:</string>
    <string name="percent_text_view">15%</string>
    <string name="tip_label">Tip:</string>
    <string name="tip_text_view">$0.00</string>
    <string name="total_label">Total:</string>
    <string name="total_text_view">$0.00</string>
    <string name="rounding_label">Rounding</string>
    <string name="apply_button">Apply</string>
</resources>
